--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,32 +7,32 @@
     "short_name": "Del Prep App", 
     "icons": [
         {
-          "src": "icon_96.png",
+          "src": "icons/icon_96",
           "sizes": "96x96",
           "type": "image/png"
         },
         {
-            "src": "icon_144.png",
+            "src": "icons/icon_144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "icon_192.png",
+            "src": "icons/icon_192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon_512.png",
+            "src": "icons/icon_512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icon_ios_120.png",
+            "src": "icons/icon_ios_120.png",
             "sizes": "120x120",
             "type": "image/png"
         },
         {
-            "src": "icon_ios_180.png",
+            "src": "icons/icon_ios_180.png",
             "sizes": "180x180",
             "type": "image/png"
         }
