--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {  
     "name" : "Deletion Prep App",
-    "start_url" :"/",
+    "start_url" :".",
     "orientation" : "any",
     "scope": "/",
     "display":"standalone",
